logs/atompiglet.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/atompiglet'...
Compiling './lib/python3.5/site-packages/atompiglet/entry.py'...
***   File "./lib/python3.5/site-packages/atompiglet/entry.py", line 37
    raise EntryError, "Supplied XML for atom:entry is actually a %s!" % tagname
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/atompiglet/ext'...
Compiling './lib/python3.5/site-packages/atompiglet/ext/kurt.py'...
***   File "./lib/python3.5/site-packages/atompiglet/ext/kurt.py", line 169
    except etree.XMLSyntaxError, e:
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/atompiglet/server.py'...
***   File "./lib/python3.5/site-packages/atompiglet/server.py", line 36
    except friendly_curl.friendly_curl.PyCURLError, e:
                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/atompiglet/tests'...
Compiling './lib/python3.5/site-packages/atompiglet/tests/test_collection.py'...
***   File "./lib/python3.5/site-packages/atompiglet/tests/test_collection.py", line 205
    print "%s could not be deleted!" % (d)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/atompiglet/tests/test_entry.py'...
***   File "./lib/python3.5/site-packages/atompiglet/tests/test_entry.py", line 477
    print "Not deleting file %s" % file
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/atompiglet/tests/test_kurt_book.py'...
***   File "./lib/python3.5/site-packages/atompiglet/tests/test_kurt_book.py", line 151
    print "Not deleting file %s" % file
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/atompiglet/tests/test_kurt_utils.py'...
***   File "./lib/python3.5/site-packages/atompiglet/tests/test_kurt_utils.py", line 54
    print "%s could not be deleted!" % (d)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/atompiglet/tests/test_rdf_utils.py'...
***   File "./lib/python3.5/site-packages/atompiglet/tests/test_rdf_utils.py", line 192
    print "%s could not be deleted!" % (d)
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/atompiglet/xslt'...
Listing './lib/python3.5/site-packages/atompiglet-0.8.1.egg-info'...
Listing './lib/python3.5/site-packages/curl'...
Listing './lib/python3.5/site-packages/friendly_curl'...
Listing './lib/python3.5/site-packages/friendly_curl/tests'...
Listing './lib/python3.5/site-packages/friendly_curl/tests/unit'...
Listing './lib/python3.5/site-packages/friendly_curl-0.9.3.egg-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/isodate'...
Listing './lib/python3.5/site-packages/isodate/tests'...
Listing './lib/python3.5/site-packages/isodate-0.6.0.dist-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycurl-7.43.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/pycurl'...
Listing './share/doc/pycurl/examples'...
Compiling './share/doc/pycurl/examples/basicfirst.py'...
Compiling './share/doc/pycurl/examples/file_upload.py'...
Compiling './share/doc/pycurl/examples/linksys.py'...
Listing './share/doc/pycurl/examples/quickstart'...
Compiling './share/doc/pycurl/examples/quickstart/file_upload_buffer.py'...
Compiling './share/doc/pycurl/examples/quickstart/file_upload_real.py'...
Compiling './share/doc/pycurl/examples/quickstart/file_upload_real_fancy.py'...
Compiling './share/doc/pycurl/examples/quickstart/follow_redirect.py'...
Compiling './share/doc/pycurl/examples/quickstart/form_post.py'...
Compiling './share/doc/pycurl/examples/quickstart/get.py'...
Compiling './share/doc/pycurl/examples/quickstart/get_python2.py'...
Compiling './share/doc/pycurl/examples/quickstart/get_python3.py'...
Compiling './share/doc/pycurl/examples/quickstart/response_headers.py'...
Compiling './share/doc/pycurl/examples/quickstart/response_info.py'...
Compiling './share/doc/pycurl/examples/quickstart/write_file.py'...
Compiling './share/doc/pycurl/examples/retriever-multi.py'...
Compiling './share/doc/pycurl/examples/retriever.py'...
Compiling './share/doc/pycurl/examples/sfquery.py'...
Compiling './share/doc/pycurl/examples/smtp.py'...
Compiling './share/doc/pycurl/examples/ssh_keyfunction.py'...
Compiling './share/doc/pycurl/examples/xmlrpc_curl.py'...
Listing './share/python-wheels'...
